--- a/style.css
+++ b/style.css
@@ -1,4 +1,66 @@
 body {
-    color:white;
+    color: white ;
     background: black;
+    margin : 0px;
+    font-family: "chakra petch", sans-serif;
+    margin-bottom; 100px;
+  }
+
+  header {
+    border-bottom: solid 2px rgb(42,122, 228);
+    padding : 32px;
+    font-size: 32px;
+    color:rgb(42, 122, 228);
+ }
+
+ .chamada {
+   backgroud: rgb (184, 156, 213);
+   padding-bottom: 80px;
+   padding-top: 80px;
+   display: flex;
+   justify-content: center;
+ }
+
+ .chamada-texto{
+    margin-right: 5%;
+ }
+
+ h1 {
+    font-size: 40px;
 }
+
+p {
+     font-size: 20%;
+}
+
+.categoria-VIDEOS {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+ }
+
+ .categoria-VIDEOS img {
+    opacity: 0.5;
+    height: 200px;
+ }
+   
+.categoria-VIDEOS img:hover {
+    opacity: 1.0;
+    border: 3px solit green;
+}
+
+.categoria h2 {
+     color: rgb(42, 122, 228);
+}
+
+
+
+
+
+ 
